[package]
name = "chat-gpt-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
base64 = "0.21.0"
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "socks", "cookies", "rustls-tls"] }

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'